--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
     "@types/react": "~18.2.45",
     "expo": "~50.0.6",
     "expo-constants": "~15.4.5",
