--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,9 @@
   "compilerOptions": {
     "strict": true
   },
-  "baseUrl": "./",
   "paths": {
-    "@assets/*": [
-      "./src/assets/*"
-    ],
-    "@styles/*": [
-      "./src/app/styles/*"
+    "@/*": [
+      "./src/*"
     ]
   },
   "include": [
