--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
     "react-native-dotenv": "^3.4.10",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "styled-components": "^6.1.8",
-    "typescript": "^5.3.0"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
