--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@hookform/resolvers": "^3.3.4",
     "@types/react": "~18.2.45",
     "expo": "~50.0.6",
     "expo-constants": "~15.4.5",
@@ -18,12 +19,16 @@
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-native": "0.73.4",
     "react-native-dotenv": "^3.4.10",
+    "react-native-masked-text": "^1.13.0",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "styled-components": "^6.1.8"
+    "react-native-select-dropdown": "^3.4.0",
+    "styled-components": "^6.1.8",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
