--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 REALM_APP_ID=
 ANDROID_CLIENT_ID=
 WEB_CLIENT_ID=
+
+KEY_ASYNCSTORAGE_ESCALA=@LJA:Escala
+KEY_ASYNCSTORAGE_REUNIAO=@LJA:Reuniao
+KEY_ASYNCSTORAGE_FUNCAO=@LJA:Funcao
+KEY_ASYNCSTORAGE_SERVO=@LJA:Servo
