--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-native-screens": "~3.29.0",
     "react-native-select-dropdown": "^3.4.0",
     "styled-components": "^6.1.8",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "expo-crypto": "~12.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
