--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ KEY_ASYNCSTORAGE_ESCALA=@LJA:Escala
 KEY_ASYNCSTORAGE_MEETING=@LJA:Reuniao
 KEY_ASYNCSTORAGE_FUNCAO=@LJA:Funcao
 KEY_ASYNCSTORAGE_SERVO=@LJA:Servo
+KEY_ASYNCSTORAGE_LANCAMENTO=@LJA:Lancamento
