--- a/app.json
+++ b/app.json
@@ -13,6 +13,15 @@
       "**/*"
     ],
     "plugins": [
+      ["expo-image-picker",
+      {
+        "photosPermission": "custom photos permission",
+        "cameraPermission": "Allow $(PRODUCT_NAME) to open the camera",
+
+        "//": "Disables the microphone permission",
+        "microphonePermission": false
+      }
+      ],
       [
         "expo-secure-store",
         {
