--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "styled-components": "^6.1.8",
     "zod": "^3.22.4",
     "@react-native-async-storage/async-storage": "1.21.0",
-    "expo-crypto": "~12.8.1"
+    "expo-crypto": "~12.8.1",
+    "expo-image-picker": "~14.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
